dist silindi ayarlandı her şey

--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -6,7 +6,7 @@
             <div class="h-auto w-full md:w-6/12 lg:w-4/12 p-2" ng-repeat="act in $ctrl.acts">
                 <a href="#!/etkinlikler">
                     <md-card>
-                        <img ng-src="metallica.jpg" class="md-card-image" alt="Washed Out">
+                        <img ng-src="assets/metallica.jpg" class="md-card-image" alt="Washed Out">
 
 
                         <md-card-title>
