--- a/app/src/homepage/homepage.template.html
+++ b/app/src/homepage/homepage.template.html
@@ -4,7 +4,7 @@
         <div class="h-64 w-64 flex-none  m-3" ng-repeat="act in $ctrl.acts">
             <md-card>
                 <div class="h-32 bg-gray-800"
-                    style="background-image : url('metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                 </div>
                 <div class="flex flex-col p-2">
 
@@ -34,7 +34,7 @@
         <div class="h-64 w-64 flex-none  m-3" ng-repeat="act in $ctrl.acts">
             <md-card>
                 <div class="h-32 bg-gray-800"
-                    style="background-image : url('metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                 </div>
                 <div class="flex flex-col p-2">
 
@@ -62,7 +62,7 @@
         <div class="h-64 w-64 flex-none  m-3" ng-repeat="act in $ctrl.acts">
             <md-card>
                 <div class="h-32 bg-gray-800"
-                    style="background-image : url('metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                 </div>
                 <div class="flex flex-col p-2">
 
@@ -90,7 +90,7 @@
         <div class="h-64 w-64 flex-none  m-3" ng-repeat="act in $ctrl.acts">
             <md-card>
                 <div class="h-32 bg-gray-800"
-                    style="background-image : url('metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
                 </div>
                 <div class="flex flex-col p-2">
 
