--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -5,7 +5,7 @@
         </div>
         <div flex="70" flex-lg="80" flex-xl="80" flex-sm="100" flex-xs="100" class="min-h-screen xl:pr-20g h-auto">
             <div class="sm:container sm:mx-auto flex flex-wrap">
-                <div class="w-4/5 sm:4/5 mx-auto sm:w-1/2 sm:mx-0 lg:w-1/3 xxl:w-1/4" ng-repeat="act in [1, 2, 3, 4, 5, 6, 7]">
+                <div class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 lg:w-1/3 xxl:w-1/4" ng-repeat="act in [1, 2, 3, 4, 5, 6, 7]">
                     <md-card>
                         <div class="h-32 bg-gray-800"
                             style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
