--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -103,7 +103,7 @@
 
 
 <md-toolbar class="md-hue-2 fixed top-0 z-40" ng-if="$ctrl.isSearchOpen" style="height: 3.5rem">
-  <div class="md-toolbar-tools">
+  <div class="md-toolbar-tools" style="max-height: 3.5rem; height: 3.5rem">
     <div class="flex flex-row h-full items-center">
       <div class="w-2/12">
         <md-button class="md-icon-button inset-auto" ng-click="$ctrl.toggleSearch()">
