--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -1,6 +1,6 @@
 <meta meta charset=utf-8>
 <md-toolbar md-scroll-shrink class="md-hue-2 top-0 h-16 z-40" style="height: 3.5rem">
-  <div class="md-toolbar-tools" style="margin: auto">
+  <div class="md-toolbar-tools" style="max-height: 3.5rem; height: 3.5rem; margin: auto">
     <!--hamburger ve site ismi-->
     <div class="flex flew-row">
       <div class="mr-4" ng-class="{'hidden': $ctrl.isSmaller('768px')}">
@@ -102,7 +102,7 @@
 </md-toolbar>
 
 
-<md-toolbar class="md-hue-2 fixed top-0 z-40" ng-if="$ctrl.isSearchOpen" style="height: 3.5rem">
+<md-toolbar class="md-hue-2 fixed top-0 z-40" ng-if="$ctrl.isSearchOpen">
   <div class="md-toolbar-tools" style="max-height: 3.5rem; height: 3.5rem">
     <div class="flex flex-row h-full items-center">
       <div class="w-2/12">
