adjusting main content and filter segment

--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -1,4 +1,4 @@
-<div class="h-auto p-2 md:float-right w-2/3 md:w-64 mx-auto">
+<div class="h-auto md:float-right w-4/5 xs:w-9/12 sm:w-9/12 mx-auto">
     <md-card class="md-padding">
         <md-content >
             <md-contact-chips ng-model="$ctrl.contacts" 
