--- a/app/src/main-content/main-content.template.html
+++ b/app/src/main-content/main-content.template.html
@@ -3,9 +3,9 @@
         <div flex="30" flex-lg="30" flex-md = "40" flex-xl="20" flex-sm="100" flex-xs="100" class="">
             <filter-segment></filter-segment>
         </div>
-        <div flex="70" flex-lg="70" flex-md = "60" flex-xl="70" flex-sm="100" flex-xs="100" class="min-h-screen xl:pr-16 h-auto">
-            <div class="sm:container sm:mx-auto flex flex-wrap">
-                <div class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xl:h-72 xl:w-72"  ng-repeat="act in [1, 2, 3, 4, 5, 6, 7]">
+        <div flex="70" flex-lg="70" flex-md = "60" flex-xl="80" flex-sm="100" flex-xs="100" class="min-h-screen xl:pr-16 h-auto">
+            <div class="flex flex-wrap">
+                <div class="w-4/5 xs:w-9/12 mx-auto sm:w-1/2 sm:mx-0 md:h-58 md:w-58 lg:h-64 lg:w-64 xxl:h-72 xxl:w-72"  ng-repeat="act in [1, 2, 3, 4, 5, 6, 7]">
                     <md-card>
                         <div class="h-40 xs:h-48 md:h-32 bg-gray-800"
                             style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
