added link to mobile search

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -101,7 +101,7 @@
   </div>
 </md-toolbar>
 
-
+<!--search part for mobile-->
 <md-toolbar class="md-hue-2 fixed top-0 z-40" ng-if="$ctrl.isSearchOpen">
   <div class="md-toolbar-tools" style="max-height: 3.5rem; height: 3.5rem">
     <div class="flex flex-row h-full items-center">
@@ -119,9 +119,12 @@
       </div>
 
       <div class="w-2/12">
-        <md-button class="md-icon-button">
-          <i class="material-icons">search</i>
-        </md-button>
+        <a href = "#!/arama">
+          <md-button class="md-icon-button">
+            <i class="material-icons">search</i>
+          </md-button>
+        </a>
+        
       </div>
 
 
