--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app = "aktivist">
     <head>
-        <link rel="manifest" href="manifest.json" />
+        <link rel="manifest" href="/manifest.json" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Aktivist</title>
