--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,13 +3,13 @@
     <head>
         
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
         <title>Aktivist</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="manifest" href="/manifest.json" />
     </head>
 
-    <body>
+    <body ngsf-fullscreen>
         <container></container>
     </body>
 </html>
