--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html ng-app = "aktivist">
-    <head>
-        
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
-        <title>Aktivist</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="manifest" href="/manifest.json" />
-    </head>
+<html ng-app="aktivist">
 
-    <body ngsf-fullscreen>
-        <container></container>
-    </body>
+<head>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
+    <title>Aktivist</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="manifest" href="/manifest.json" />
+</head>
+
+<body>
+    <script>
+        function hideAddressBar() {
+            if (document.documentElement.scrollHeight < window.outerHeight / window.devicePixelRatio)
+                document.documentElement.style.height = (window.outerHeight / window.devicePixelRatio) + 'px';
+            setTimeout(window.scrollTo(1, 1), 0);
+        }
+        window.addEventListener("load", function () { hideAddressBar(); });
+        window.addEventListener("orientationchange", function () { hideAddressBar(); });</script>
+    <container></container>
+</body>
+
 </html>
