--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -1,10 +1,10 @@
 <meta meta charset=utf-8>
-<md-toolbar md-scroll-shrink class="md-hue-2 top-0 h-16 z-40" style="height: 3.5rem" ngsf-toggle-fullscreen>
+<md-toolbar md-scroll-shrink class="md-hue-2 top-0 h-16 z-40" style="height: 3.5rem">
   <div class="md-toolbar-tools" style="max-height: 3.5rem; height: 3.5rem; margin: auto">
     <!--hamburger ve site ismi-->
     <div class="flex flew-row">
       <div class="mr-4" ng-class="{'hidden': $ctrl.isSmaller('768px')}">
-        <md-button class="md-icon-button" ng-click="$ctrl.toggleLeft()" ngsf-toggle-fullscreen>
+        <md-button class="md-icon-button" ng-click="$ctrl.toggleLeft()">
           <md-icon md-svg-icon="{{$ctrl.icon.hamburger}}" class="favorite-icon"></md-icon>
         </md-button>
       </div>
