changed heights in act details

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -1,7 +1,9 @@
 <div class = "p-4" layout = "row" layout-sm = "column" layout-wrap>
     <div class="bg-gray-500 container" flex = "66" flex-sm = "100" flex-xs = "100">
             <md-card>
-                    <img ng-src="{{$ctrl.act.url}}" class="md-card-image" alt="Washed Out">
+                    <div class="h-56 md:h-72 xl:h-96 bg-gray-800"
+                            style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    </div>
     
     
                     <md-card-title>
