--- a/app/src/index.html
+++ b/app/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="manifest" href="/manifest.json" />
     <script>
-        (function () {
+        function toggleFullScreen() {
             var doc = window.document;
             var docEl = doc.documentElement;
 
@@ -21,12 +21,12 @@
             else {
                 cancelFullScreen.call(doc);
             }
-        }());
+        }
         
         </script>
 </head>
 
-<body>
+<body onclick = 'toggleFullScreen()'>
     <container></container>
 </body>
 
