--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -50,6 +50,12 @@
 
     <!--sidenav for mobile-->
     <div ng-class="{'hidden': !$ctrl.isSmaller('768px')}">
+        <md-button class="md-icon-button" aria-label="Favorite" ng-click="$ctrl.resize()">
+          <md-icon md-svg-icon="{{$ctrl.resize}}" class="favorite-icon"></md-icon>
+        </md-button>
+      </div>
+
+    <div ng-class="{'hidden': !$ctrl.isSmaller('768px')}">
       <md-button class="md-icon-button" aria-label="Favorite" ng-click="$ctrl.toggleLeft()">
         <md-icon md-svg-icon="{{$ctrl.icon.hamburger}}" class="favorite-icon"></md-icon>
       </md-button>
