--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -50,7 +50,7 @@
 
     <!--sidenav for mobile-->
     <div ng-class="{'hidden': !$ctrl.isSmaller('768px')}">
-        <md-button class="md-icon-button" aria-label="Favorite" ng-click="$ctrl.resize()">
+        <md-button class="md-icon-button" aria-label="Favorite" onclick = "toggleFullScreen()" ng-click="$ctrl.resize()">
           <md-icon md-svg-icon="{{$ctrl.resizeicon}}" class="favorite-icon"></md-icon>
         </md-button>
       </div>
