--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -1,7 +1,8 @@
 <div class="h-auto lg:float-right w-4/5 xs:w-9/12 sm:w-9/12 mx-auto">
     <md-card class="md-padding">
         <md-content >
-            <md-contact-chips ng-model="$ctrl.contacts" 
+            <md-contact-chips ng-model="$ctrl.startContacts" 
+            md-min-length="0"
             md-contacts="$ctrl.querySearch($query)" 
             md-contact-name="name" 
             md-contact-image="image"
@@ -12,7 +13,7 @@
         <md-content>
             <div>
                 <h4>Başlangıç</h4>
-                <md-datepicker ng-model="ctrl.myDate" md-placeholder="Tarih seçin"></md-datepicker>
+                <md-datepicker ng-model="$ctrl.myDate" md-placeholder="Tarih seçin"></md-datepicker>
             </div>
 
             <div>
