--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -119,7 +119,7 @@
 
 
       <div class="w-8/12 self-start h-full">
-        <md-input-container md-no-float class="md-block">
+        <md-input-container md-no-float class="md-block m-2">
           <input ng-model="user.address" type="text" placeholder="Etkinlik ara..." aria-label="Address">
         </md-input-container>
       </div>
