no navbar landscape

--- a/app/src/navbar/navbar.template.html
+++ b/app/src/navbar/navbar.template.html
@@ -1,5 +1,5 @@
 <meta meta charset=utf-8>
-<md-toolbar md-scroll-shrink class="md-hue-2 top-0 h-16 z-40" style="height: 3.5rem">
+<md-toolbar md-scroll-shrink class="landscape:hidden md-hue-2 top-0 h-16 z-40" style="height: 3.5rem">
   <div class="md-toolbar-tools" style="max-height: 3.5rem; height: 3.5rem; margin: auto">
     <!--hamburger ve site ismi-->
     <div class="flex flew-row">
