--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -1,4 +1,4 @@
-<main layout="column" flex class="w-full h-full min-h-full">
+<main layout="column" flex class="w-full h-screen min-h-screen">
     <navbar></navbar>
 
     <div layout="row" flex>
