--- a/app/src/container/container.template.html
+++ b/app/src/container/container.template.html
@@ -1,4 +1,4 @@
-<main layout="column" flex class="w-full h-screen min-h-screen">
+<main layout="column" flex class="w-full md:h-screen">
     <navbar></navbar>
 
     <div layout="row" flex>
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <md-content class="w-full" md-scroll-y>
+        <md-content class="w-full">
             <div ng-view autoscroll="false"></div>
         </md-content>
 
