--- a/app/src/homepage/homepage.template.html
+++ b/app/src/homepage/homepage.template.html
@@ -15,7 +15,7 @@
 
                 </div>
                 <div class="flex flex-row justify-between float-right">
-                    <a href="#!/etkinlikler">
+                    <a href="#!/etkinlik/{{act.instance_id}}">
                         <md-button class="md-button">DETAY</md-button>
                     </a>
                     <md-button class="md-icon-button h-1 w-1 self-center">
