--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -18,25 +18,23 @@
 
             <div class="py-1">
                 <h4 class="px-1">Bitiş</h4>
-                <md-datepicker ng-model="ctrl.myDate2" md-placeholder="Tarih seçin"></md-datepicker>
+                <md-datepicker ng-model="$ctrl.myDate2" md-placeholder="Tarih seçin"></md-datepicker>
             </div>
         </md-content>
+
+        
 
 
         <md-input-container class="py-1">
             <label>Şehir Seç</label>
-            <md-select ng-model="ctrl.cityState">
-                <md-select-header class="city_header">
-                        <!--implement search func for cities-->
-                        <input  ng-model="searchTerm"  
-                                type="search"
-                                placeholder="Şehir ara..."
-                                class="city_header-searchbox md-text">
-                </md-select-header>
-                <md-option><em>Tüm Şehirler</em></md-option>
-                <md-option ng-repeat="city in ctrl.cities" ng-value="city.abbrev" ng-disabled="$index === 1">
-                {{city.abbrev}}
-                </md-option>
+            <md-select ng-model="$ctrl.cityState" md-on-close="$ctrl.clearSearchTerm()" layout="column">
+                        <md-select-header>
+                            <input  ng-model="$ctrl.cityInput" placeholder="Şehir ara..." onkeydown="event.stopPropagation()">
+                        </md-select-header>
+                        <md-optgroup >
+                            <md-option ng-value="city" ng-repeat="city in $ctrl.cities |
+                                filter:$ctrl.cityInput">{{city}}</md-option>
+                        </md-optgroup>
             </md-select>
         </md-input-container>
     </md-card>
