act detail bağlanmaya çalışılıyor

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -15,7 +15,7 @@
                           
                           <md-card-content>
                                 <p>
-                                    {{$ctrl.act.detail}}
+                                    {{$ctrl.act.details}}
                                 </p>
                             </md-card-content>
     
