act detail bağlanmaya çalışılıyor

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -10,11 +10,12 @@
                             <md-card-title-text>
                               <span class="md-headline">{{$ctrl.act.name}}</span>
                               <span class="md-subhead">{{$ctrl.act.date}}</span>
+                              <span class="float-right">hellooo</span>
                             </md-card-title-text>
                           </md-card-title>
                           
                           <md-card-content>
-                                <p>
+                                <p class = "text">
                                     {{$ctrl.act.details}}
                                 </p>
                             </md-card-content>
