--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -2,7 +2,7 @@
     <div class="bg-gray-500 container" flex = "66" flex-sm = "100" flex-xs = "100">
             <md-card>
                     <div class="h-56 md:h-72 xl:h-96 bg-gray-800"
-                            style="background-image : url('assets/metallica.jpg'); background-repeat: no-repeat; background-position: center center; background-size : cover;">
+                    ng-style="{'background-image': 'url('+ $ctrl.act.image +')', 'background-repeat': 'no-repeat', 'background-position': 'center center', 'background-size': 'cover'}">
                     </div>
     
     
