act details ile bağlantı çalışılıyor

--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -23,7 +23,7 @@
                                 </p>
                                 <div class = "h-px bg-gray-400 w-full my-3"></div>
                                 <div class = "flex flex-col">
-                                    <div class = "flex flex-row justify-start" ng-repeat = "fiyat in $ctrl.act.fiyatlar">
+                                    <div class = "flex flex-row justify-start" ng-repeat = "fiyat in $ctrl.fiyatlar">
                                         <span class = "mr-5">{{fiyat.category}}</span>
                                         <span class = "mr-5">{{fiyat.name}}</span>
                                         <span class = "mr-5">{{fiyat.price + " TL"}}</span>
