--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -22,6 +22,9 @@
                                     {{$ctrl.act.details}}
                                 </p>
                                 <div class = "h-px bg-gray-400 w-full my-3"></div>
+                                <div>
+                                    <h2 class = "text-xl">Fiyatlar:</h2>
+                                </div>
                                 <div class = "flex flex-col">
                                     <div class = "flex flex-row justify-start" ng-repeat = "fiyat in $ctrl.fiyatlar">
                                         <span class = "mr-5">{{fiyat.category}}</span>
