--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -23,7 +23,7 @@
                                 </p>
                                 <div class = "h-px bg-gray-400 w-full my-3"></div>
                                 <div>
-                                    <h2 class = "text-xl">Fiyatlar:</h2>
+                                    <h2 class = "text-xl font-bold">Fiyatlar:</h2>
                                 </div>
                                 <div class = "flex flex-col">
                                     <div class = "flex flex-row justify-start" ng-repeat = "fiyat in $ctrl.fiyatlar">
