--- a/app/src/act-details/act-details.template.html
+++ b/app/src/act-details/act-details.template.html
@@ -51,45 +51,52 @@
                                         <span ng-if = "fiyat.campaign">{{fiyat.campaign}}</span>
                                     </div>
                                 </div>
-                                <div layout="column" layout-gt-sm="row">
-                                    <div flex="50" class="py-1">
-                                    <h2 class = "text-xl font-bold">Fiyatlar:</h2>
-                                    <div layout = "row" layout-align="start center">
-                                        <md-input-container class="my-1">
-                                            <md-select ng-model="selectedOption">
-                                            <md-option  ng-repeat="fiyat in $ctrl.fiyatlar" ng-selected="fiyat.campaign == null" ng-value="{{fiyat}}" ng-if="fiyat.campaign == null">{{fiyat.category}}</md-option>
-                                            </md-select>
-                                        </md-input-container>
-                                        <div ng-if="selectedOption.campaign == null">
-                                            <p class="md-caption">{{selectedOption.price}}</p>
-                                        </div>
-                                    </div>
-                                    </div>
-                                    <div flex="50"  class="py-1" ng-hide="$ctrl.checkNull()">
-                                    <h2 class = "text-xl font-bold">Kampanyalar:</h2>
-                                    <div layout = "column " layout-gt-sm="row" layout-align="start start" layout-align-gt-sm="start center">
-                                        <div>
-                                        <md-input-container class="my-1">
-                                            <md-select ng-model="selectedOption2">
-                                                <md-option  ng-repeat="fiyat2 in $ctrl.fiyatlar"  ng-selected="fiyat2.campaign != null" ng-value="{{fiyat2}}" ng-show="fiyat2.campaign != null">{{fiyat2.campaign}}</md-option>
-                                            </md-select>
-                                        </md-input-container>
-                                        </div>
-                                    <div>
-                                        <md-input-container class="my-1">
-                                            <md-select ng-model="selectedOption3">
-                                                <md-option  ng-repeat="fiyat3 in $ctrl.fiyatlar"  ng-selected="fiyat3.campaign == selectedOption2.campaign" ng-value="{{fiyat3}}" ng-show="fiyat3.campaign == selectedOption2.campaign">{{fiyat3.category}}</md-option>
-                                            </md-select>
-                                        </md-input-container> </div>
-                                        <div><md-input-container class="my-1">
-                                                <md-select ng-model="selectedOption4">
-                                                    <md-option  ng-repeat="fiyat4 in $ctrl.fiyatlar"  ng-selected="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign" ng-value="{{fiyat4}}" ng-show="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign">{{fiyat4.name}}</md-option>
+                                <div layout="column">
+                                    <div flex="50" class="pt-1">
+                                        <h2 class = "text-xl font-bold">Fiyatlar:</h2>
+                                        <div class="border border-indigo-500 rounded-lg" layout = "row" layout-align="start center">
+                                            <md-input-container class="my-1">
+                                                <md-select ng-model="selectedOption">
+                                                <md-option  ng-repeat="fiyat in $ctrl.fiyatlar" ng-selected="fiyat.campaign == null" ng-value="{{fiyat}}" ng-if="fiyat.campaign == null">{{fiyat.category}}</md-option>
                                                 </md-select>
-                                            </md-input-container></div>
-                                        <div class="my-1">
-                                            <p class="md-caption">{{selectedOption4.price}}</p>
+                                            </md-input-container>
+                                            <div flex="" layout-align="end none">
+                                                <div class="bg-blue-700 rounded-lg">
+                                                        <p class="text-4xl text-white px-1">{{selectedOption.price}}</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
+                                    <div flex="50"  class="pt-1" ng-hide="$ctrl.checkNull()">
+                                        <h2  class = "text-xl font-bold">Kampanyalar:</h2>
+                                        <div class="border border-indigo-500 rounded-lg" layout = "column " layout-gt-sm="row" layout-align="start none" layout-align-gt-sm="start center">
+                                            <div>
+                                            <md-input-container class="my-1">
+                                                <md-select ng-model="selectedOption2">
+                                                    <md-option  ng-repeat="fiyat2 in $ctrl.fiyatlar"  ng-selected="fiyat2.campaign != null" ng-value="{{fiyat2}}" ng-show="fiyat2.campaign != null">{{fiyat2.campaign}}</md-option>
+                                                </md-select>
+                                            </md-input-container>
+                                            </div>
+                                            <div>
+                                                <md-input-container class="my-1">
+                                                    <md-select ng-model="selectedOption3">
+                                                        <md-option  ng-repeat="fiyat3 in $ctrl.fiyatlar"  ng-selected="fiyat3.campaign == selectedOption2.campaign" ng-value="{{fiyat3}}" ng-show="fiyat3.campaign == selectedOption2.campaign">{{fiyat3.category}}</md-option>
+                                                    </md-select>
+                                                </md-input-container> 
+                                            </div>
+                                            <div>
+                                                <md-input-container class="my-1">
+                                                    <md-select ng-model="selectedOption4">
+                                                        <md-option  ng-repeat="fiyat4 in $ctrl.fiyatlar"  ng-selected="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign" ng-value="{{fiyat4}}" ng-show="selectedOption3.category == fiyat4.category && selectedOption2.campaign == fiyat4.campaign">{{fiyat4.name}}</md-option>
+                                                    </md-select>
+                                                </md-input-container>
+                                            </div>
+                                            <div flex="" layout-align="end none">
+                                                <div class="bg-blue-700 rounded-lg">
+                                                    <p class="text-4xl text-white px-1">{{selectedOption4.price}}</p>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                            </md-card-content>
